fix minor change

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 
         header .link-logo {
             width: 100px;
-            display: block;
+            display: flex;
+            justify-content: center;
         }
 
         header .header-inner {
@@ -318,6 +319,9 @@
                     .the-menu ul li {
                         margin-left: var(--smDis);
                     }
+
+                    header .frm-sch {
+                        width: 350px;
                 }
 
         /* =========== Section Heading Settings =========== */
